# jarvis

./: .gitignore  INSTRUCTIONS.md  README.md  RUNBOOK.md  THE_PATH_FORWARD.md  dev_tasks.py  jarvis_clean.py  package-lock.json  pyproject.toml  runner.py  state.json  state.template.json  status.sh  stopwork.sh  workmode.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  INSTALL.md  MAC_AUTOMATION.md  SPEC.md
jarvis/: __init__.py  __main__.py  config.py  constants.py  types.py
jarvis/actions/: __init__.py  apps.py  base.py  filesystem.py  git.py  parser.py  system.py
jarvis/audit/: __init__.py  logger.py
jarvis/core/: __init__.py  classifier.py  router.py
jarvis/llm/: __init__.py  base.py  ollama.py  registry.py
jarvis/plugins/: __init__.py  base.py
jarvis/policy/: __init__.py  engine.py  rate_limiter.py
jarvis/stt/: __init__.py  base.py
jarvis/tts/: __init__.py  base.py
jarvis/web/: __init__.py  app.py
jarvis/web/templates/: index.html
scripts/: apple_stt_once.swift  benchmark_latency.py  metrics_summary.py  reset_state.sh
tests/: test_action_policy.py  test_llm_contracts.py  test_perf_latency.py
